AMpliem la info

--- a/index.html
+++ b/index.html
@@ -11,87 +11,97 @@
   <!-- 1. Capçalera -->
   <header>
     <h1>Què és un LLM?</h1>
+    <!-- Títol principal que resumeix el contingut de la pàgina -->
   </header>
 
   <!-- 2. Explicació bàsica -->
   <section id="explicacio">
     <h2>Explicació bàsica</h2>
-    <p>Els models de llenguatge a gran escala (LLMs) són sistemes d’intel·ligència artificial entrenats amb grans quantitats de text per generar respostes similars a les humanes.</p>
+    <!-- Introducció general als LLMs amb definició concisa -->
+    <p>Els models de llenguatge a gran escala (LLMs) són sistemes d'intel·ligència artificial entrenats amb grans quantitats de text per generar respostes similars a les humanes.</p>
+    
+    <!-- Llistat d'aplicacions pràctiques dels LLMs -->
     <ul>
-      <li>Assistents virtuals</li>
-      <li>Traducció automàtica</li>
-      <li>Redacció de textos</li>
-      <li>Anàlisi de sentiments</li>
+      <li>Assistents virtuals - Ex: ChatGPT, Alexa, Siri</li>
+      <li>Traducció automàtica - Traducció entre idiomes amb context</li>
+      <li>Redacció de textos - Generació d'articles, correus, etc.</li>
+      <li>Anàlisi de sentiments - Detecció de tones emocionals en text</li>
     </ul>
   </section>
 
   <!-- 3. Taula comparativa de models -->
   <section id="taula-models">
     <h2>Comparativa de models</h2>
+    <!-- Taula que mostra els principals models d'IA actuals amb característiques clau -->
     <table>
       <thead>
         <tr>
-          <th>Model</th>
-          <th>Empresa</th>
-          <th>Codi obert</th>
-          <th>Accés</th>
+          <th>Model</th>          <!-- Nom del model d'IA -->
+          <th>Empresa</th>        <!-- Corporació desenvolupadora -->
+          <th>Codi obert</th>     <!-- Indica si és accessible públicament -->
+          <th>Accés</th>          <!-- Com pot accedir-hi l'usuari mitjà -->
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>GPT-4</td>
-          <td>OpenAI</td>
-          <td>No</td>
-          <td>ChatGPT Plus</td>
+          <td>GPT-4</td>          <!-- Últim model d'OpenAI -->
+          <td>OpenAI</td>         <!-- Empresa fundada per Elon Musk i altres -->
+          <td>No</td>             <!-- Model propietari -->
+          <td>ChatGPT Plus</td>  <!-- Requereix subscripció de pagament -->
         </tr>
         <tr>
-          <td>Claude</td>
-          <td>Anthropic</td>
-          <td>No</td>
-          <td>Poe</td>
+          <td>Claude</td>         <!-- Competidor directe de ChatGPT -->
+          <td>Anthropic</td>      <!-- Empresa enfocada en IA segura -->
+          <td>No</td>             <!-- Model tancat -->
+          <td>Poe</td>           <!-- Disponible a través de la plataforma Poe -->
         </tr>
         <tr>
-          <td>Gemini</td>
-          <td>Google</td>
-          <td>No</td>
-          <td>Disponible amb Google</td>
+          <td>Gemini</td>         <!-- Anticament Bard, el model de Google -->
+          <td>Google</td>         <!-- Desenvolupat per DeepMind (Google) -->
+          <td>No</td>             <!-- Tecnologia propietària -->
+          <td>Disponible amb Google</td> <!-- Integrat amb productes Google -->
         </tr>
         <tr>
-          <td>LLaMA</td>
-          <td>Meta</td>
-          <td>Sí</td>
-          <td>Repositoris de codi</td>
+          <td>LLaMA</td>          <!-- Família de models oberts de Meta -->
+          <td>Meta</td>           <!-- Facebook (Meta) -->
+          <td>Sí</td>             <!-- Model d'accés obert -->
+          <td>Repositoris de codi</td> <!-- Disponible a GitHub i HuggingFace -->
         </tr>
       </tbody>
     </table>
-    <button onclick="mostrarAmagarTaula()">Mostrar/Amagar taula</button>
+    <button onclick="mostrarAmagarTaula()">Mostrar/Amagar taula</button> <!-- Interactivitat JavaScript -->
   </section>
 
   <!-- 4. Enllaços a plataformes -->
   <section id="enllacos">
     <h2>Plataformes rellevants</h2>
+    <!-- Llistat de plataformes clau per accedir a LLMs -->
     <ul>
-      <li><a href="https://openai.com/" target="_blank">OpenAI</a></li>
-      <li><a href="https://poe.com/" target="_blank">Poe</a></li>
-      <li><a href="https://huggingface.co/" target="_blank">Hugging Face</a></li>
+      <li><a href="https://openai.com/" target="_blank">OpenAI</a> - Creadors de ChatGPT i els models GPT</li>
+      <li><a href="https://poe.com/" target="_blank">Poe</a> - Plataforma que agrega múltiples models d'IA</li>
+      <li><a href="https://huggingface.co/" target="_blank">Hugging Face</a> - Comunitat i repositori de models d'IA oberts</li>
     </ul>
   </section>
 
   <!-- 5. Riscos ètics -->
   <section id="riscs">
     <h2>Riscos ètics</h2>
+    <!-- Principals preocupacions sobre els LLMs -->
     <ul>
-      <li>Desinformació</li>
-      <li>Biaixos</li>
-      <li>Privacitat</li>
+      <li>Desinformació - Capacitat de generar contingut fals però persuasiu</li>
+      <li>Biaixos - Reflecteixen prejudicis dels seus datos d'entrenament</li>
+      <li>Privacitat - Riscos de filtracions d'informació sensible</li>
+      <li>Impacte laboral - Automatització de feines creatives</li>
     </ul>
   </section>
 
   <!-- 6. Secció opcional: trivia o curiositats -->
   <section id="trivia">
     <h2>Trivia o curiositats</h2>
-    <p>Sabies que alguns LLMs tenen més de 100.000 milions de paràmetres?</p>
-    <button onclick="alert('Correcte!')">Fes clic si ho sabies</button>
+    <!-- Dades curioses per fer la informació més accessible -->
+    <p>Sabies que alguns LLMs tenen més de 100.000 milions de paràmetres? Això equival a aproximadament el nombre de connexions neuronals en un cervell humà.</p>
+    <p>El cost d'entrenar models com GPT-4 pot superar els 100 milions de dòlars en computació.</p>
+    <button onclick="alert('Correcte! Molts models actuals superen aquesta xifra!')">Fes clic si ho sabies</button>
   </section>
 
   <script src="app.js"></script>
