--- a/index.html
+++ b/index.html
@@ -30,46 +30,49 @@
   </section>
 
   <!-- 3. Taula comparativa de models -->
-  <section id="taula-models">
-    <h2>Comparativa de models</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Model</th>
-          <th>Empresa</th>
-          <th>Codi obert</th>
-          <th>Accés</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>GPT-4</td>
-          <td>OpenAI</td>
-          <td>No</td>
-          <td>ChatGPT Plus</td>
-        </tr>
-        <tr>
-          <td>Claude</td>
-          <td>Anthropic</td>
-          <td>No</td>
-          <td>Poe</td>
-        </tr>
-        <tr>
-          <td>Gemini</td>
-          <td>Google</td>
-          <td>No</td>
-          <td>Disponible amb Google</td>
-        </tr>
-        <tr>
-          <td>LLaMA</td>
-          <td>Meta</td>
-          <td>Sí</td>
-          <td>Repositoris de codi</td>
-        </tr>
-      </tbody>
-    </table>
-    <button onclick="mostrarAmagarTaula()">Mostrar/Amagar taula</button>
-  </section>
+<section id="comparativa">
+  <h2>Comparativa de models</h2>
+
+  <button id="toggleTaula">Mostrar taula</button>
+
+  <table id="taulaComparativa">
+    <thead>
+      <tr>
+        <th>Model</th>
+        <th>Empresa</th>
+        <th>Codi obert</th>
+        <th>Accés</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>GPT-4</td>
+        <td>OpenAI</td>
+        <td>No</td>
+        <td>ChatGPT Plus</td>
+      </tr>
+      <tr>
+        <td>Claude</td>
+        <td>Anthropic</td>
+        <td>No</td>
+        <td>Poe</td>
+      </tr>
+      <tr>
+        <td>Gemini</td>
+        <td>Google</td>
+        <td>No</td>
+        <td>Disponible amb Google</td>
+      </tr>
+      <tr>
+        <td>LLaMA</td>
+        <td>Meta</td>
+        <td>Sí</td>
+        <td>Repositoris de codi</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+
 
   <!-- 4. Enllaços a plataformes -->
   <section id="enllacos">
